deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  selector:
    matchLabels:
      app: node
  replicas: 2
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: maksdev/mynode:1
        ports:        
        - containerPort: 3000
