ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: node-ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-deployment
                port:
                  number: 3000
